fix filtering log tab search. AG-22079
Squashed commit of the following:

commit a5c00cd37be552a89347f407850ebc672f226819
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue May 30 19:46:39 2023 +0300

    fix tab search in ff

commit 5379f3aaaca845b464d081774d5c890115933d1d
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue May 30 14:04:24 2023 +0300

    fix filtering-log__empty style

--- a/Extension/src/pages/filtering-log/components/FilteringEvents/filtering-events.pcss
+++ b/Extension/src/pages/filtering-log/components/FilteringEvents/filtering-events.pcss
@@ -176,7 +176,7 @@
         /* do not remove "position" and "z-index" */
         /* due to AG-10446 */
         position: relative;
-        z-index: 10;
+        z-index: 9;
         background-color: var(--white);
 
         @media (prefers-color-scheme: dark) {
